# rexgen-rs

./: CONTEXT.md  Cargo.toml  rustfmt.toml
docs/adr/: 0001-ordered-rayon-parallelism.md  0002-unordered-generation-by-default.md
src/: app.rs  calculate.rs  cli.rs  corpus.rs  error.rs  generate.rs  main.rs  model.rs  parse.rs  perm.rs
